@startuml architecture

interface IFSA {
  + State[] states
  + Transition[] transitions
  + State startState
  + State[] acceptStates
  + Alphabet alphabet
  + addState(state: State): void
  + addTransition(transition: Transition): void
  + setStartState(state: State): void
  + addAcceptState(states: State[]): void
  + toJSON(): FSAJSON
}

class FSA implements IFSA {
  - State[] states
  - Transition[] transitions
  - State startState
  - State[] acceptStates
  - Alphabet alphabet
  + FSA(states: State[], transitions: Transition[], startState: State, acceptStates: State[], alphabet: Alphabet)
  - validateTransitions(transitions: Transition[], alphabet: Alphabet): void
  + addState(state: State): void
  + addTransition(transition: Transition): void
  + setStartState(state: State): void
  + addAcceptState(states: State[]): void
  + toJSON(): FSAJSON
  + static fromJSON(json: FSAJSON): FSA
}

class DFA extends FSA {
  - State emptyState
  + DFA(states: State[], transitions: Transition[], startState: State, acceptStates: State[], alphabet: Alphabet)
  - validateDFA(): void
  + addTransition(transition: Transition): void
  + static fromJSON(json: FSAJSON): DFA
}

class NFA extends FSA {
  + NFA(states: State[], transitions: Transition[], startState: State, acceptStates: State[], alphabet: Alphabet)
  + toDFA(removeUnreachableStates: boolean): DFA
  - initializeDFAStartState(dfa: DFA, dfaStates: Map<string, State>, unmarkedStates: string[]): void
  - processUnmarkedStates(dfa: DFA, dfaStates: Map<string, State>, unmarkedStates: string[]): void
  - addNewStateToDFA(dfa: DFA, dfaStates: Map<string, State>, unmarkedStates: string[], stateKey: string): void
  - markAcceptStates(dfa: DFA, currentStates: Set<State>, currentStateKey: string): void
  - epsilonClosure(states: Set<State>): Set<State>
  - move(states: Set<State>, symbol: string): Set<State>
  - getStateSetKey(states: Set<State>): string
  - getStatesFromKey(key: string): Set<State>
  - removeUnreachableStates(dfa: DFA): void
  + static fromJSON(json: FSAJSON): NFA
}

class AutomataCreator {
  + static createFromJSON(json: FSAJSON): IFSA
  - static isDFA(json: FSAJSON): boolean
}

class ValidationError {
  - string message
  + ValidationError(message: string)
}


FSA ..> ValidationError
DFA ..> ValidationError
NFA ..> ValidationError
AutomataCreator ..> IFSA
AutomataCreator ..> DFA
AutomataCreator ..> NFA

@enduml
